# SnakeNN

./: .gitignore  CMakeGuide.txt  CMakeLists.txt  README.md  initialize_git_repo.bat  quick_setup.bat
src/: advanced_snake_network.cpp  advanced_snake_network.h  advanced_trainer_main.cpp  aggressive_trainer.cpp  behavior_analyzer.cpp  comprehensive_evaluator.cpp  debug_test.cpp  diagnostic_test.cpp  enhanced_trainer.cpp  fixed_trainer.cpp  fixed_trainer_clean.cpp  getaction_accessor_fix.cpp  minimal_improved_trainer.cpp  minimal_test.cpp  model_tester.cpp  network_nn.cpp  network_nn_broken.cpp  network_nn_fixed.cpp  neural_network.h  neural_network_backup.cpp  neural_network_backup_current.cpp  neural_network_corrupted.cpp  neural_network_fixed.h  neural_network_getaction_fix.cpp  neural_network_old.cpp  neural_network_problematic.cpp  optimized_trainer.cpp  pytorch_test.cpp  selfaware_trainer.cpp  simple_agent_test.cpp  simple_fixed.cpp  simple_neural_test.cpp  snake_game.cpp  snake_logic.cpp  snake_logic.h  snake_test.cpp  snake_trainer.cpp  visual_demo.cpp
